--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "mongoose": "^8.17.0",
+    "next": "14.2.31",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.31"
+    "react-hook-form": "^7.62.0",
+    "swr": "^2.3.4",
+    "zod": "^4.0.15"
   },
   "devDependencies": {
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.31"
+    "eslint-config-next": "14.2.31",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
