--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.62.0",
+    "react-hot-toast": "^2.5.2",
     "swr": "^2.3.4",
     "zod": "^4.0.15"
   },
